# Job-Scraper

./: .gitignore  README.md  docker-compose.yml
cloud/: cdk.json  package-lock.json  package.json
cloud/lib/: crawler.ts  stack.ts
cloud/test/: lib.test.ts
ingestion/: Dockerfile  pyproject.toml
ingestion-service/: .dockerignore  Dockerfile  pyproject.toml
ingestion-service/ingestion/: config.py  dispatcher.py  main.py
ingestion/crawlers/: base.py  linkedin.py
