[tool.poetry]
name = "meai"
version = "0.1.0"
description = ""
authors = ["Tobi Ijose <ijosetobi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"
webdriver-manager = "^4.0.2"
pydantic-settings = "^2.5.2"
aws-lambda-powertools = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
